# ugc

./: .gitignore  README.md
kafka/: docker-compose.yml  pyproject.toml  readme.md
kafka/events/: constants.py
kafka/events/kafka_utils/: consumer.py  producer.py
kafka/events/messages/: base.py
ugc_analytics/: .env.example  Dockerfile  docker-compose.yml  pyproject.toml  readme.md
ugc_analytics/clickhouse_conf/node1/: config.xml
ugc_analytics/src/: main.py
ugc_analytics/src/core/: config.py
ugc_analytics/src/events/kafka_utils/: consumer.py  producer.py
ugc_analytics/src/events/messages/: base.py
ugc_analytics/src/internal/: clickhouse.py
ugc_api/: .dockerignore  .env.example  .gitignore  Dockerfile  alembic.ini.example  docker-compose.dev.yml  docker-compose.yml  mongo-init.sh  pyproject.toml  readme.md
ugc_api/migrations/: env.py
ugc_api/migrations/versions/: 2022_11_28_2037_aaf7ce61db93_init.py
ugc_api/nginx/: nginx.conf
ugc_api/src/: main.py  run.py
ugc_api/src/core/: config.py  log_config.py
ugc_api/src/core/crud/: base.py  exceptions.py  filters.py  retrieve.py  types.py
ugc_api/src/dependencies/: auth.py  session.py
ugc_api/src/events/: constants.py  producer.py
ugc_api/src/events/kafka_utils/: config.py  producer.py
ugc_api/src/internal/: bookmarks.py  events.py  likes.py  reviews.py
ugc_api/src/internal/mongo_crud/: base.py  constants.py
ugc_api/src/models/: __init__.py  base.py  general.py
ugc_api/src/routes/: exceptions.py
ugc_api/src/routes/v1/: bookmarks.py  events.py  likes.py  reviews.py
ugc_api/src/schemas/: auth.py  base.py  bookmarks.py  event_messages.py  likes.py  movie_progress.py  reviews.py
ugc_api/src/utils/: db_session.py  sentry.py  string_utils.py  time.py  utils.py
ugc_api/src/utils/orm_utils/: querying.py  softdelete.py
ugc_api/tests/endpoints/: conftest.py
ugc_api/tests/endpoints/core/: constants.py
ugc_api/tests/endpoints/ugc/bookmarks/: requests.py  test_bookmarks.py
ugc_api/tests/endpoints/ugc/likes/: requests.py  test_likes.py
ugc_api/tests/endpoints/ugc/reviews/: requests.py  (+1 more)
ugc_api/tests/endpoints/utils/: requests.py
(+12 files in other folders)
