[tool.poetry]
name = "kafka"
version = "0.1.0"
description = ""
authors = ["Dan <babindj@uriit.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
orjson = "^3.8.2"
aiokafka = "^0.8.0"
aiomisc = "^16.2.9"
pydantic = "^1.10.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
