[tool.poetry]
name = "ugc"
version = "0.1.0"
description = ""
authors = ["Dan <babindj@uriit.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.10.2"
aiomisc = "^16.2.9"
orjson = "^3.8.2"
aiokafka = "^0.8.0"
sqlalchemy = "^1.4.44"
fastapi = "^0.87.0"
uvicorn = "^0.20.0"
python-dotenv = "^0.21.0"
asyncpg = "^0.27.0"
alembic = "^1.8.1"
psycopg2 = "^2.9.5"
requests = "^2.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
